--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Titillium+Web:wght@300&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+
 * {
   box-sizing: border-box;
   max-width: 100%;
@@ -6,8 +10,16 @@
 
 body {
   margin: 0;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 1.7px;
 }
 
 .App {
   text-align: center;
+  color: #1d3557;
+}
+
+h2 {
+  font-size: 45px;
+  font-weight: lighter;
 }
