--- a/client/src/components/layout/Navbar.css
+++ b/client/src/components/layout/Navbar.css
@@ -1,12 +1,21 @@
 nav {
+  width: 100vw;
+  position: fixed;
+  top: 0;
+}
+
+.nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding-left: 20px;
+  align-items: center;
+  padding-left: 35px;
   padding-right: 20px;
+  height: 80px;
+  background-color: white;
 }
 
-nav > ul {
+.menu-ul {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -14,8 +23,44 @@ nav > ul {
   align-items: center;
 }
 
-li > a {
-  margin: 20px;
+.mini-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 30px;
+  align-items: center;
+  background-color: #1d3557;
+  width: 100vw;
+}
+
+.logo {
+  font-size: 75px;
+  margin: 0;
+  color: #e63946;
+  font-family: "Bebas Neue", cursive;
+}
+
+.log {
+  margin: 0 20px;
   text-decoration: none;
-  padding: 10px;
+  padding: 5px;
+  color: white;
+  font-weight: bolder;
+  letter-spacing: 1.7px;
+  font-size: 14px;
+}
+
+.menu-a {
+  margin: 0 20px;
+  text-decoration: none;
+  padding: 5px;
+  color: #1d3557;
+  font-weight: lighter;
+  letter-spacing: 1.7px;
+}
+
+.log:hover {
+  color: #e63946;
 }
