react react-awesome-reveal

--- a/client/src/components/layout/Landing.css
+++ b/client/src/components/layout/Landing.css
@@ -30,9 +30,11 @@
 .image-a {
   font-weight: lighter;
   font-size: 25px;
-  color: white;
+  color: var(--white);
+  background-color: var(--red);
   margin-left: 50px;
-  padding: 6px;
+  padding: 8px;
+  cursor: pointer;
 }
 
 .big-image-overlay > h3 {
@@ -55,8 +57,8 @@
 }
 
 .image-a:hover {
-  color: var(--white);
-  background-color: var(--red);
+  color: var(--red);
+  background-color: var(--white);
   border-radius: 3px;
   text-decoration: none;
 }
