--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,6 +33,16 @@ h2 {
   font-weight: lighter;
 }
 
+h3 {
+  font-weight: lighter;
+  font-size: 20px;
+}
+
+h4 {
+  font-weight: lighter;
+  font-size: 18px;
+}
+
 .btn {
   font-size: 20px;
   color: var(--white);
