--- a/client/src/components/layout/Navbar.css
+++ b/client/src/components/layout/Navbar.css
@@ -2,6 +2,7 @@ nav {
   width: 100vw;
   position: fixed;
   top: 0;
+  z-index: 1;
 }
 
 .nav {
@@ -68,7 +69,7 @@ nav {
 }
 
 .log {
-  margin: 0 10px;
+  margin: 0 22px;
   text-decoration: none;
   padding: 5px;
   color: white;
@@ -79,9 +80,9 @@ nav {
 }
 
 .menu-a {
-  margin: 0 20px;
+  margin: 0 10px;
   text-decoration: none;
-  padding: 30px;
+  padding: 30px 20px;
   color: var(--blue);
   font-weight: lighter;
   letter-spacing: 1.7px;
@@ -89,8 +90,8 @@ nav {
 }
 
 .dropdown-btn {
-  margin: 0 20px;
-  padding: 25px;
+  margin: 0 10px;
+  padding: 28px 15px;
   color: var(--blue);
   font-weight: lighter;
   letter-spacing: 1.7px;
