--- a/client/src/components/product/ProductsPage.css
+++ b/client/src/components/product/ProductsPage.css
@@ -1,3 +1,10 @@
 .product-page {
-  margin-top: 110px;
+  margin-top: 120px;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 1100px;
+  margin: 110px auto;
 }
