--- a/client/src/components/layout/Landing.css
+++ b/client/src/components/layout/Landing.css
@@ -86,8 +86,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin: 0 auto;
-  margin-bottom: 70px;
+  margin: 70px auto;
 }
 
 .f-item {
