dashboard, superdashboard, edit product

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,7 +35,7 @@ h2 {
 }
 
 h3 {
-  font-weight: lighter;
+  font-weight: bold;
   font-size: 20px;
 }
 
@@ -74,12 +74,27 @@ h4 {
   color: var(--red);
 }
 
-.danger {
-  transition: 0.3s background-color;
-  background-color: tomato;
+.color-success {
+  color: teal;
 }
 
-.success {
-  transition: 0.3s background-color;
-  background-color: lightseagreen;
+.color-danger {
+  color: tomato;
+}
+
+.content::-webkit-scrollbar,
+.cart-body::-webkit-scrollbar {
+  width: 12px;
+}
+
+.content::-webkit-scrollbar-track,
+.cart-body::-webkit-scrollbar-track {
+  background: transparent; /* color of the tracking area */
+}
+.content::-webkit-scrollbar-thumb,
+.cart-body::-webkit-scrollbar-thumb {
+  background-color: var(--blue); /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  border: 3px solid var(--white); /* creates padding around scroll thumb */
+  padding-top: 5px;
 }
