--- a/client/src/components/users/Dashboard.css
+++ b/client/src/components/users/Dashboard.css
@@ -1,17 +1,17 @@
-.dashboard > div {
-  width: 45%;
-  height: 350px;
-  margin: 0 auto;
-}
-
 .dashboard > h1 {
   width: 100%;
+}
+
+.dash-container {
+  width: 100%;
+  height: 350px;
+  margin: 0 auto;
+  max-height: 350px;
 }
 
 hr {
   width: 100%;
   border-top: 1px solid var(--blue);
-  margin-bottom: 20px;
   margin-top: 0;
 }
 
@@ -48,4 +48,9 @@ hr {
 
 .address-btn {
   width: 60%;
+}
+
+.dash-btn {
+  width: 100%;
+  margin: 25px 0;
 }
